--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;1,400;1,500&display=swap"
     rel="stylesheet">
-  <title>Movie Search</title>
+  <title>The Movie Finder</title>
 </head>
 
 <body>
